add link to demo

--- a/pde.html
+++ b/pde.html
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="description">
-                    <p>Simulates the  <a href="https://en.wikipedia.org/wiki/Heat_equation">heat equation</a> using the finite difference method.</p>
-                    <p>Draw on the canvas!</p>
+                    <p>Simulates the  <a href="https://en.wikipedia.org/wiki/Heat_equation">heat equation. Draw on the canvas!</a> using the finite difference method.</p>
+                    <p>See the code <a href="https://github.com/pmaatta/heat">here</a>.</p>
                 </div>
 
             </div>
