--- a/pde.html
+++ b/pde.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="description">
-                    <p>Simulates the  <a href="https://en.wikipedia.org/wiki/Heat_equation">heat equation. Draw on the canvas!</a> using the finite difference method.</p>
+                    <p>Simulates the  <a href="https://en.wikipedia.org/wiki/Heat_equation">heat equation</a> using the finite difference method. Draw on the canvas!</p>
                     <p>See the code <a href="https://github.com/pmaatta/heat">here</a>.</p>
                 </div>
 
